@@ -22,6 +22,14 @@
 			<BEGIN AT_LINE_START="TRUE">=head2</BEGIN>
 			<END AT_LINE_START="TRUE">=cut</END>
 		</SPAN>
+        <SPAN TYPE="LABEL" DELEGATE="POD">
+			<BEGIN AT_LINE_START="TRUE">=head3</BEGIN>
+			<END AT_LINE_START="TRUE">=cut</END>
+		</SPAN>
+		<SPAN TYPE="LABEL" DELEGATE="POD">
+			<BEGIN AT_LINE_START="TRUE">=head4</BEGIN>
+			<END AT_LINE_START="TRUE">=cut</END>
+		</SPAN>
 		<SPAN TYPE="LABEL" DELEGATE="POD">
 			<BEGIN AT_LINE_START="TRUE">=item</BEGIN>
 			<END AT_LINE_START="TRUE">=cut</END>
